--- a/HaierOven/AddFoodCell.xib
+++ b/HaierOven/AddFoodCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -34,14 +34,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uui-7w-l42">
-                        <rect key="frame" x="294" y="11" width="18" height="18"/>
+                        <rect key="frame" x="294" y="10" width="20" height="20"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="22" id="WeX-DZ-ALg"/>
                             <constraint firstAttribute="width" secondItem="Uui-7w-l42" secondAttribute="height" multiplier="1:1" id="dyR-86-TA9"/>
                             <constraint firstAttribute="height" constant="22" id="eZ3-Kv-Txh"/>
                         </constraints>
-                        <state key="normal" image="deletec.png">
+                        <state key="normal" image="cookbook_cancel.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <variation key="default">
@@ -61,10 +61,10 @@
                     <constraint firstAttribute="bottom" secondItem="22z-EB-Mkg" secondAttribute="bottom" id="6Kn-Wg-SwF"/>
                     <constraint firstAttribute="trailing" secondItem="iku-u4-HNR" secondAttribute="trailing" id="Ci9-k8-m9d"/>
                     <constraint firstItem="iku-u4-HNR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="G9b-9a-FeI"/>
-                    <constraint firstItem="Uui-7w-l42" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="IYZ-hw-YKo"/>
+                    <constraint firstItem="Uui-7w-l42" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="IYZ-hw-YKo"/>
                     <constraint firstItem="iku-u4-HNR" firstAttribute="leading" secondItem="22z-EB-Mkg" secondAttribute="trailing" id="MUx-JN-5V5"/>
                     <constraint firstItem="iku-u4-HNR" firstAttribute="leading" secondItem="22z-EB-Mkg" secondAttribute="trailing" id="Xm7-mv-eOf"/>
-                    <constraint firstAttribute="trailing" secondItem="Uui-7w-l42" secondAttribute="trailing" constant="8" id="aKs-wc-zVw"/>
+                    <constraint firstAttribute="trailing" secondItem="Uui-7w-l42" secondAttribute="trailing" constant="6" id="aKs-wc-zVw"/>
                     <constraint firstItem="22z-EB-Mkg" firstAttribute="width" secondItem="iku-u4-HNR" secondAttribute="width" id="g36-AT-IyQ"/>
                     <constraint firstAttribute="bottom" secondItem="Uui-7w-l42" secondAttribute="bottom" constant="10" id="jxe-SU-dGg"/>
                     <constraint firstItem="22z-EB-Mkg" firstAttribute="height" secondItem="iku-u4-HNR" secondAttribute="height" id="jya-R0-xmA"/>
@@ -80,6 +80,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="deletec.png" width="26" height="26"/>
+        <image name="cookbook_cancel.png" width="20" height="20"/>
     </resources>
 </document>
