--- a/HaierOven/AlertDatePicker.xib
+++ b/HaierOven/AlertDatePicker.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -72,8 +72,8 @@
                     <date key="date" timeIntervalSinceReferenceDate="442913259.34447497">
                         <!--2015-01-14 07:27:39 +0000-->
                     </date>
-                    <date key="minimumDate" timeIntervalSinceReferenceDate="-1609419600">
-                        <!--1950-01-01 11:00:00 +0000-->
+                    <date key="minimumDate" timeIntervalSinceReferenceDate="-3187256743">
+                        <!--1900-01-01 10:54:17 +0000-->
                     </date>
                     <date key="maximumDate" timeIntervalSinceReferenceDate="473252400">
                         <!--2015-12-31 11:00:00 +0000-->
