--- a/HaierOven/Cookbook/Views/Liukang.storyboard
+++ b/HaierOven/Cookbook/Views/Liukang.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -30,13 +30,10 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cookbook_list_item_bg_default.png" translatesAutoresizingMaskIntoConstraints="NO" id="9OH-IQ-WUJ">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cookbook_list_item_bg_default.png" translatesAutoresizingMaskIntoConstraints="NO" id="9OH-IQ-WUJ">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="9OH-IQ-WUJ" secondAttribute="height" multiplier="5:4" id="IO5-uJ-07r"/>
-                                    </constraints>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mask_bottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Ms-RU-hbI">
+                                <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mask_bottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Ms-RU-hbI">
                                     <rect key="frame" x="0.0" y="168" width="320" height="88"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="88" id="Q7R-Cn-lRK"/>
@@ -61,6 +58,7 @@
                                     <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
+                                    <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQf-Zd-uEO">
                                     <rect key="frame" x="232" y="207" width="70" height="28"/>
@@ -81,17 +79,18 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="9OH-IQ-WUJ" secondAttribute="bottom" id="1Ti-Yd-7uu"/>
                                 <constraint firstAttribute="bottom" secondItem="unU-9k-fqA" secondAttribute="bottom" constant="25.5" id="2ae-ok-nF2"/>
                                 <constraint firstItem="7RA-72-NEa" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" constant="20" id="CDG-QD-dZF"/>
+                                <constraint firstItem="9OH-IQ-WUJ" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" id="GYa-eC-A5Y"/>
+                                <constraint firstItem="9OH-IQ-WUJ" firstAttribute="top" secondItem="lqh-Rt-pqG" secondAttribute="top" id="IMZ-rP-hkM"/>
                                 <constraint firstAttribute="trailing" secondItem="zQf-Zd-uEO" secondAttribute="trailing" constant="18" id="PMG-hZ-ZWu"/>
                                 <constraint firstItem="unU-9k-fqA" firstAttribute="centerY" secondItem="zQf-Zd-uEO" secondAttribute="centerY" constant="0.25" id="PPW-ma-cQ2"/>
-                                <constraint firstItem="9OH-IQ-WUJ" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" id="QgW-X6-by1"/>
+                                <constraint firstAttribute="bottom" secondItem="9OH-IQ-WUJ" secondAttribute="bottom" id="fr6-U7-4GN"/>
                                 <constraint firstAttribute="bottom" secondItem="6Ms-RU-hbI" secondAttribute="bottom" id="hRa-QL-dmI"/>
-                                <constraint firstAttribute="trailing" secondItem="9OH-IQ-WUJ" secondAttribute="trailing" id="jxa-6w-wg0"/>
                                 <constraint firstItem="6Ms-RU-hbI" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" id="nwU-IS-Kct"/>
                                 <constraint firstAttribute="trailing" secondItem="unU-9k-fqA" secondAttribute="trailing" constant="90" id="ogA-Pl-deE"/>
                                 <constraint firstItem="unU-9k-fqA" firstAttribute="leading" secondItem="7RA-72-NEa" secondAttribute="trailing" constant="18" id="orp-Oz-8s5"/>
+                                <constraint firstAttribute="trailing" secondItem="9OH-IQ-WUJ" secondAttribute="trailing" id="qzS-c4-1Mc"/>
                                 <constraint firstAttribute="bottom" secondItem="7RA-72-NEa" secondAttribute="bottom" constant="15" id="rxv-ea-sKu"/>
                                 <constraint firstAttribute="trailing" secondItem="6Ms-RU-hbI" secondAttribute="trailing" id="vwR-it-fNR"/>
                             </constraints>
