--- a/HaierOven/SecTableViewCell.xib
+++ b/HaierOven/SecTableViewCell.xib
@@ -38,12 +38,15 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.78823529410000004" green="0.58823529409999997" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cnU-Rd-9T6">
-                        <rect key="frame" x="235.00000180922586" y="17" width="30" height="38.5"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cnU-Rd-9T6">
+                        <rect key="frame" x="236.00000091195108" y="13" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <state key="normal" image="gantan.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <connections>
+                            <action selector="infoButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="68Z-HL-K83"/>
+                        </connections>
                     </button>
                 </subviews>
             </tableViewCellContentView>
